--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 	<main>
 		<div class="column large">
 			<div class="mainstory">
-				<h1>Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</h1>
+				<span>Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."
+				</span>
 				<div class="narrative">
 					<p>
 						MONUMENT VALLEY, AZ - Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque nec nisl at augue dapibus dignissim. Nunc condimentum rutrum metus, ac eleifend lacus viverra nec. Proin ultrices egestas diam sed mollis. Nulla sapien massa, dictum vitae est et, pellentesque rutrum risus. Nunc volutpat, metus ac rutrum tempus, orci nisi porttitor dolor, sit amet luctus metus est ut mauris. Quisque vulputate nisl vitae massa rhoncus, at sagittis elit accumsan. Etiam tempus, lorem quis blandit imperdiet, enim dui lobortis tortor, sit amet lobortis arcu ex id odio. Nam fermentum nulla et eros bibendum, sed ullamcorper massa scelerisque. Vestibulum aliquet placerat leo a hendrerit. Nulla non sagittis neque. Nullam sit amet fringilla massa.
@@ -31,27 +32,33 @@
 				</div>
 			</div>
 
-			<div class="story">
-				<h2>Orca Spends Vacation at Land World Puget</h2>
-				<div class="narrative">
-					<p>
-						PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...
-					</p>
+			<div class="stories">
+				<div class="story">
+					<h2>Orca Spends Vacation at Land World Puget</h2>
+					<div class="narrative">
+						<p>
+							PUGET, SO - Sed felis elit, faucibus et ipsum vel, vehicula ultrices purus. Sed congue odio vitae malesuada rhoncus. Integer vitae nisi pulvinar ante accumsan...
+						</p>
+					</div>
+					<div class="earth photo-content">
+						Earth Spins Backwards for 2017
+					</div>
 				</div>
-			</div>
 
-			<div class="earth photo-content">
-				Earth Spins Backwards for 2017
-			</div>
+				<div class="story">
+					<h2>Burger for Breakfast: How Early is too Early?</h2>
+					<div class="narrative">
+						<p>Mew York, MY—Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque id quam facilisis, ultrices ante ut, rutrum enim. Praesent eu nisl erat.
+						</p>
+					</div>
+					<div class="camera photo-content">
+						Research Shows Cameras Erase Memory
+					</div>
+				</div>
 
-			<div class="story">
-				<h2>Burger for Breakfast: How Early is too Early?</h2>
-			</div>
 
-			<div class="camera photo-content">
-				Research Shows Cameras Erase Memory
-			</div>
 
+			</div>
 		</div>
 
 		<div class="column medium">
