--- a/index.html
+++ b/index.html
@@ -55,9 +55,6 @@
 						Research Shows Cameras Erase Memory
 					</div>
 				</div>
-
-
-
 			</div>
 		</div>
 
@@ -90,13 +87,34 @@
 			</div>
 			<div class="news-bites">
 				<h3><strong>NEWS BITES</strong></h3>
-
-					<span>Cat Emoji Goes Viral Buy Youtube Views Home Business Advertising Ideas Advertising Internet Online Illustration in Marketing Materials Finally a Top Secret Way You Can
-					</span>
+					<span class="bite">Cat Emoji Goes Viral</span>
+					<span class="bite">Buy Youtube Views</span>
+					<span class="bite">Home Business Advertising Ideas</span>
+					<span class="bite">Advertising Internet Online</span>
+					<span class="bite">Illustration in Marketing Materials</span>
+					<span class="bite">Finally a Top Secret Way You Can</span>
 
 			</div>
 		</div>
 	</main>
+
+<footer>
+	<div class="info">
+		<div class="wordmark">
+			My Times
+		</div>
+		<nav>
+			<span><a href="#">World</a></span>
+			<span><a href="#">U.S.</a></span>
+			<span><a href="#">Tech</a></span>
+			<span><a href="#">Science</a></span>
+		</nav>
+	</div>
+
+	<div class="copyright">
+		© 2016, My Times (A Division of Codecademy bite)
+	</div>
+</footer>
 
 </body>
 
